--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     }],
     "comma-dangle": [ 2, "never" ],
     "import/no-extraneous-dependencies": [ 0 ],
+    "react/jsx-filename-extension": [ 0 ],
+    "react/require-default-props": [ 0 ],
     "no-confusing-arrow": [ 0 ],
     "no-underscore-dangle": [ 0 ],
     "no-param-reassign": [ 1 ],
