--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-controlled-form",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Controlled Forms for React and Redux",
   "main": "lib/index.js",
   "files": [
@@ -12,6 +12,7 @@
   "scripts": {
     "babel": "babel -d lib modules",
     "check": "npm run format && npm run lint && npm run flow && npm run test:coverage",
+    "docs": "gitbook install && gitbook build && gh-pages -d _book",
     "flow": "flow modules",
     "format": "prettier --single-quote --no-semi --jsx-bracket-same-line --write \"modules/**/*.js\"",
     "lint": "eslint modules",
@@ -34,6 +35,11 @@
     "controlled-form"
   ],
   "dependencies": {
+    "gitbook-plugin-advanced-emoji": "^0.2.2",
+    "gitbook-plugin-anker-enable": "0.0.4",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-github": "^2.0.0",
+    "gitbook-plugin-prism": "^2.2.0",
     "prop-types": "^15.5.10",
     "recompose": "^0.23.5",
     "redux-actions": "^2.0.3"
@@ -58,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "flow-bin": "^0.40.0",
+    "gh-pages": "^1.0.0",
     "gitbook-cli": "^2.3.0",
     "jest": "^18.1.0",
     "prettier": "^1.3.1",
