--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^5.0.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
