--- a/examples/third-party-component/package.json
+++ b/examples/third-party-component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-form",
+  "name": "third-party-component",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "react-controlled-form": "^1.1.5",
     "react-dom": "^15.5.0",
     "react-redux": "^5.0.5",
-    "react-select": "1.0.0-rc",
+    "react-select": "1.0.0-rc.5",
     "redux": "^3.5.2"
   },
   "devDependencies": {
