new render-props API

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
     "object-property-newline": [ 2, {
       "allowMultiplePropertiesPerLine": true
     }],
-    "comma-dangle": [ 2, "never" ],
+    "comma-dangle": [ 0 ],
+    "import/prefer-default-export": [ 0 ],
     "import/no-extraneous-dependencies": [ 0 ],
     "react/jsx-filename-extension": [ 0 ],
     "react/require-default-props": [ 0 ],
