update docs for 3.0 release

--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "lib/"
   ],
   "scripts": {
-    "babel": "rimraf lib && babel -d lib modules",
-    "check": "npm run format && npm run lint && npm run flow && npm run test:coverage",
-    "docs": "gitbook install && gitbook build && gh-pages -d _book",
-    "flow": "flow modules",
-    "format": "prettier --write \"modules/**/*.js\"",
+    "babel": "babel -d lib modules",
+    "bootstrap": "lerna bootstrap",
+    "clean": "learn clean --yes",
+    "clear": "rimraf coverage _book lib es",
+    "check": "yarn format && yarn lint && yarn coverage && yarn flow",
+    "format": "prettier --write \"examples/*/src/**/*.js\" && prettier --write \"modules/**/*.js\"",
+    "flow": "flow",
     "lint": "eslint modules",
     "release": "npm run check && npm run babel && npm publish",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test": "cross-env BABEL_ENV=commonjs jest",
+    "coverage": "yarn test -- --coverage",
+    "watch": "yarn test -- --watch",
+    "setup": "yarn clear && yarn bootstrap && yarn babel"
   },
   "repository": "https://github.com/rofrischmann/react-controlled-form",
   "author": "Robin Frischmann",
@@ -51,6 +55,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "codeclimate-test-reporter": "^0.4.0",
+    "cross-env": "^5.1.3",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-flowtype": "^2.30.0",
@@ -67,6 +72,7 @@
     "gitbook-plugin-prism": "^2.2.0",
     "jest": "20.0.4",
     "jest-cli": "^21.1.0",
+    "lerna": "^2.8.0",
     "prettier": "^1.7.0",
     "react": "^15.5.4",
     "react-redux": "^5.0.5",
