--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-controlled-form",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Controlled Forms for React and Redux",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -47,6 +47,7 @@
   "dependencies": {
     "fast-loops": "^1.0.0",
     "prop-types": "^15.5.10",
+    "react-fast-compare": "^2.0.2",
     "recompose": "^0.23.5",
     "redux-actions": "^2.0.3"
   },
