--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-controlled-form",
-  "version": "3.2.1",
+  "version": "3.2.5",
   "description": "Controlled Forms for React and Redux",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -12,7 +12,7 @@
     "es/**"
   ],
   "scripts": {
-    "build": "BABEL_ENV=commonjs babel -d lib modules && babel -d es modules",
+    "build": "cross-env BABEL_ENV=commonjs babel -d lib modules && babel -d es modules",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean --yes",
     "clear": "rimraf coverage _book lib es",
