--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,28 @@
     "coverage": true,
     "lib": true,
     "es": true,
-    "_book": true
+    "_book": true,
+    "**/._*": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/.Spotlight-V100": true,
+    "**/.Trashes": true,
+    "**/*~": true,
+    "**/*.diff": true,
+    "**/*.err": true,
+    "**/*.log": true,
+    "**/*.orig": true,
+    "**/*.pyc": true,
+    "**/*.rej": true,
+    "**/*.sass-cache": true,
+    "**/*.sw?": true,
+    "**/*.vi": true,
+    "**/node_modules": true,
+    "**/build": true,
+    "**/coverage": true,
+    "**/lib": true,
+    "**/es": true,
+    "**/_book": true,
+    "**/.next": true
   }
 }
