--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,5 @@
 {
-  "lerna": "2.0.0",
-  "version": "independent",
+  "version": "0.0.1",
   "npmClient": "yarn",
-  "packages": [
-    "examples/*",
-    ""
-  ]
+  "useWorkspaces": true
 }
