full rewrite to use zod under the hood

--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,11 @@
     "@babel/preset-react"
   ],
   "env": {
+    "test": {
+      "plugins": [
+        "@babel/plugin-transform-modules-commonjs"
+      ]
+    },
     "commonjs": {
       "presets": [
         [
