--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,5 @@
 {
-  "search.exclude": {
-    "# OS or Editor files": true,
-    "._*": true,
-    ".DS_Store": true,
-    "Thumbs.db": true,
-    "# Files that might appear on external disks": true,
-    ".Spotlight-V100": true,
-    ".Trashes": true,
-    "# Always-ignore extensions": true,
-    "*~": true,
-    "*.diff": true,
-    "*.err": true,
-    "*.log": true,
-    "*.orig": true,
-    "*.pyc": true,
-    "*.rej": true,
-    "*.sass-cache": true,
-    "*.sw?": true,
-    "*.vi": true,
-    "node_modules": true,
-    "coverage": true,
-    "lib": true,
-    "es": true,
-    "_book": true
-  },
   "files.exclude": {
-    "# OS or Editor files": true,
-    "._*": true,
-    ".DS_Store": true,
-    "Thumbs.db": true,
-    "# Files that might appear on external disks": true,
-    ".Spotlight-V100": true,
-    ".Trashes": true,
-    "# Always-ignore extensions": true,
-    "*~": true,
-    "*.diff": true,
-    "*.err": true,
-    "*.log": true,
-    "*.orig": true,
-    "*.pyc": true,
-    "*.rej": true,
-    "*.sass-cache": true,
-    "*.sw?": true,
-    "*.vi": true,
-    "node_modules": true,
-    "coverage": true,
-    "lib": true,
-    "es": true,
-    "_book": true,
     "**/._*": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
@@ -60,15 +12,21 @@
     "**/*.orig": true,
     "**/*.pyc": true,
     "**/*.rej": true,
+    "**/*.vsix": true,
     "**/*.sass-cache": true,
     "**/*.sw?": true,
     "**/*.vi": true,
+    "**/yarn.lock": true,
+    "**/.merlin": true,
     "**/node_modules": true,
-    "**/build": true,
-    "**/coverage": true,
     "**/lib": true,
     "**/es": true,
-    "**/_book": true,
-    "**/.next": true
+    "**/coverage": true,
+    "**/dist": true,
+    "**/.next": true,
+    "**/.vercel": true,
+    "**/out": true,
+    "**/.vscode": true,
+    "**/.turbo": true
   }
 }
